# marcopolo

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  PRODUCT.md  README.md  docker-compose.yml  next.config.ts  nginx.conf  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
landing/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  ai_bridge.rs  ai_cli.rs  ai_local.rs  amadeus.rs  demo.rs  duffel.rs  error.rs  lib.rs  liteapi.rs  mcp.rs  shell.rs  tools.rs  types.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/agents/: page.tsx
src/app/budget/: page.tsx
src/app/chat/: page.tsx
src/app/connect/: page.tsx
src/app/experiences/: page.tsx
src/app/flights/: page.tsx
src/app/hotels/: page.tsx
src/app/itinerary/: page.tsx
src/app/journal/: page.tsx
src/app/photos/: page.tsx
src/components/: app-header.tsx  app-sidebar.tsx  coming-soon.tsx
src/components/animation/: animated-section.tsx  page-transition.tsx  use-reduced-motion.ts
src/components/chat/: ai-connect-modal.tsx  ask-marco.tsx  chat-composer.tsx  chat-hero.tsx  chat-message.tsx  marco-ascii.ts  marco-face.tsx  suggestion-pills.tsx
src/components/dashboard/: activity-feed.tsx  bookings-table.tsx  budget-ring.tsx  capability-rail.tsx  command-hero.tsx  docs-donut.tsx  globe.tsx  journal-teaser.tsx  next-trip-card.tsx  readiness-list.tsx  (+2 more)
src/lib/: demo-dashboard.ts  format.ts  supabase.ts  tauri.ts  web-fallback.ts
supabase/migrations/: 00001_initial_schema.sql
(+25 files in other folders)
