[package]
name = "marcopolo"
version = "0.1.0"
description = "Marco Polo — open-source travel aggregator desktop app"
authors = ["Marco Polo contributors"]
license = "MIT"
repository = "https://github.com/ovixis/marcopolo"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["sync"] }
dotenvy = "0.15"

[dev-dependencies]
tokio = { version = "1", features = ["sync", "rt", "macros"] }
